Update docs again

--- a/docs/manage-metadata-using-gravitino.mdx
+++ b/docs/manage-metadata-using-gravitino.mdx
@@ -3,7 +3,8 @@ title: "Manage metadata using Gravitino"
 slug: /manage-metadata-using-gravitino
 date: 2023-12-10
 keyword: metadata manage 
-license: Copyright 2023 Datastrato Pvt Ltd. This software is licensed under the Apache License version 2.
+license: "Copyright 2023 Datastrato Pvt Ltd.
+This software is licensed under the Apache License version 2."
 ---
 
 [//]: # (import Tabs from "@theme/Tabs";)
