--- a/docs/manage-metadata-using-gravitino.mdx
+++ b/docs/manage-metadata-using-gravitino.mdx
@@ -41,10 +41,10 @@ like metalakes, catalogs, schemas, and tables. The following contents are includ
 In this document, Gravitino uses Apache Hive catalog as an example to show how to manage metadata by Gravitino. Other catalogs are similar to Hive catalog,
 but they may have some differences, especially in catalog property, table property and column type. For more details, please refer to the related doc.
 
-- [**Apache Hive**](/apache-hive-catalog)
-- [**MySQL**](/jdbc-postgresql-catalog)
-- [**PostgreSQL**](/jdbc-mysql-catalog)
-- [**Apache Iceberg**](/lakehouse-iceberg-catalog)
+- [**Apache Hive**](./apache-hive-catalog)
+- [**MySQL**](./jdbc-postgresql-catalog)
+- [**PostgreSQL**](./jdbc-mysql-catalog)
+- [**Apache Iceberg**](./lakehouse-iceberg-catalog)
 
 
 Assuming Gravitino has just started, and the host and port is `http://localhost:8090`.
